
* 0.2.4 on CRAN
* adding missing reference to `dplyr::n` which broke two of the plots.

2023-07-11 Steven E. Pav <shabbychef@gmail.com>
* 0.2.3 on CRAN
* package had been pulled because of upstream dependency.
* convert citEntry to bibentry

2022-07-06 Steven E. Pav <shabbychef@gmail.com>
* fix bug where you could not search for Gin or Vodka.

2021-04-01 Steven E. Pav <shabbychef@gmail.com>
* 0.2.2 on CRAN
* merge many short ingredients.
* fix some units in webtender data.
* search by ingredient regex.

2019-07-01 Steven E. Pav <shabbychef@gmail.com>
* 0.2.1 on CRAN
* CRAN fix for hanging tests.
* revert to ggtern.

2018-08-20 Steven E. Pav <shabbychef@gmail.com>
* removing ggtern in favor of Ternary package.

2018-07-15 Steven E. Pav <shabbychef@gmail.com>
* adding Hobson's Choice button.

2018-07-07 Steven E. Pav <shabbychef@gmail.com>
* adding 10K cocktails from drinksmixer.

2018-07-05 Steven E. Pav <shabbychef@gmail.com>
* 0.1.0 on CRAN

2018-06-15 Steven E. Pav <shabbychef@gmail.com>
* start work
