@@ -4,8 +4,8 @@ Authors@R: c(person(c("Steven", "E."), "Pav",
     role=c("aut","cre"),
     email="shabbychef@gmail.com",
     comment = c(ORCID = "0000-0002-4197-6195")))
-Version: 0.2.3.100
-Date: 2023-12-20
+Version: 0.2.4
+Date: 2025-10-05
 License: LGPL-3
 Title: 'shiny' App to Discover Cocktails
 BugReports: https://github.com/shabbychef/cocktailApp/issues
@@ -24,7 +24,6 @@ Imports:
     tibble,
     ggplot2,
     magrittr,
-    ggtern,
     forcats,
     DT
 Suggests: 
@@ -32,4 +31,4 @@ Suggests:
 URL: https://github.com/shabbychef/cocktailApp
 Collate:
     'cocktailApp.r'
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.2
