@@ -27,10 +27,6 @@ importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,labs)
-importFrom(ggtern,Llab)
-importFrom(ggtern,Rlab)
-importFrom(ggtern,Tlab)
-importFrom(ggtern,ggtern)
 importFrom(grDevices,rgb)
 importFrom(graphics,legend)
 importFrom(magrittr,"%>%")
